# freeswitch

./: configure.ac
conf/vanilla/autoload_configs/: modules.conf.xml
src/: switch_channel.c  switch_core_media.c
src/mod/asr_tts/mod_speechkit/: Makefile.am  mod_speechkit.c
